ZIL-28: UI fixes

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -28,6 +28,7 @@
         <div><zil-link href="https://github.com/Zilliqa">GitHub</zil-link></div>
         <div><zil-link href="https://invite.zilliqa.com">Slack</zil-link></div>
         <div><zil-link href="https://gitter.im/Zilliqa">Gitter</zil-link></div>
+        <div><zil-link href="https://forum.zilliqa.com">Forum</zil-link></div>
       </div>
     </dg-row>
   </zil-card-content>
