--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <dg-row container alignment="space-between">
-  <app-logo></app-logo>
+  <app-logo routerLink="/"></app-logo>
   <app-search-bar></app-search-bar>
 </dg-row>
