--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,28 +7,28 @@
 
       <div>
         <div class="mat-body-2">Links</div>
-        <div><zil-link href="https://zilliqa.com">Official Site</zil-link></div>
-        <div><zil-link href="https://blog.zilliqa.com">Blog</zil-link></div>
+        <div><a zil-link href="https://zilliqa.com">Official Site</a></div>
+        <div><a zil-link href="https://blog.zilliqa.com">Blog</a></div>
       </div>
 
       <mat-divider vertical></mat-divider>
 
       <div>
         <div class="mat-body-2">Social</div>
-        <div><zil-link href="https://twitter.com/zilliqa">Twitter</zil-link></div>
-        <div><zil-link href="https://t.me/zilliqachat">Telegram</zil-link></div>
-        <div><zil-link href="https://www.reddit.com/r/zilliqa">Reddit</zil-link></div>
-        <div><zil-link href="https://www.youtube.com/channel/UCvinnFbf0u71cajoxKcfZIQ">YouTube</zil-link></div>
+        <div><a zil-link href="https://twitter.com/zilliqa">Twitter</a></div>
+        <div><a zil-link href="https://t.me/zilliqachat">Telegram</a></div>
+        <div><a zil-link href="https://www.reddit.com/r/zilliqa">Reddit</a></div>
+        <div><a zil-link href="https://www.youtube.com/channel/UCvinnFbf0u71cajoxKcfZIQ">YouTube</a></div>
       </div>
 
       <mat-divider vertical></mat-divider>
 
       <div>
         <div class="mat-body-2">For Developers</div>
-        <div><zil-link href="https://github.com/Zilliqa">GitHub</zil-link></div>
-        <div><zil-link href="https://invite.zilliqa.com">Slack</zil-link></div>
-        <div><zil-link href="https://gitter.im/Zilliqa">Gitter</zil-link></div>
-        <div><zil-link href="https://forum.zilliqa.com">Forum</zil-link></div>
+        <div><a zil-link href="https://github.com/Zilliqa">GitHub</a></div>
+        <div><a zil-link href="https://invite.zilliqa.com">Slack</a></div>
+        <div><a zil-link href="https://gitter.im/Zilliqa">Gitter</a></div>
+        <div><a zil-link href="https://forum.zilliqa.com">Forum</a></div>
       </div>
     </dg-row>
   </zil-card-content>
