--- a/src/app/scenes/transaction-list/transaction-list.component.html
+++ b/src/app/scenes/transaction-list/transaction-list.component.html
@@ -45,7 +45,7 @@
         <th mat-header-cell *matHeaderCellDef>Value</th>
 
         <td mat-cell *matCellDef="let transaction">
-          {{ transaction.value | currency : 'ZIL' }}
+          {{ transaction.value | currency : 'ZIL' : true : '1.6-6' }}
         </td>
       </ng-container>
 
