Few additional fixes

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,28 +7,28 @@
 
       <div>
         <div class="mat-body-2">Links</div>
-        <div><a zil-link href="https://zilliqa.com">Official Site</a></div>
-        <div><a zil-link href="https://blog.zilliqa.com">Blog</a></div>
+        <div><a zil-link href="https://zilliqa.com" target="_blank">Official Site</a></div>
+        <div><a zil-link href="https://blog.zilliqa.com" target="_blank">Blog</a></div>
       </div>
 
       <mat-divider vertical></mat-divider>
 
       <div>
         <div class="mat-body-2">Social</div>
-        <div><a zil-link href="https://twitter.com/zilliqa">Twitter</a></div>
-        <div><a zil-link href="https://t.me/zilliqachat">Telegram</a></div>
-        <div><a zil-link href="https://www.reddit.com/r/zilliqa">Reddit</a></div>
-        <div><a zil-link href="https://www.youtube.com/channel/UCvinnFbf0u71cajoxKcfZIQ">YouTube</a></div>
+        <div><a zil-link href="https://twitter.com/zilliqa" target="_blank">Twitter</a></div>
+        <div><a zil-link href="https://t.me/zilliqachat" target="_blank">Telegram</a></div>
+        <div><a zil-link href="https://www.reddit.com/r/zilliqa" target="_blank">Reddit</a></div>
+        <div><a zil-link href="https://www.youtube.com/channel/UCvinnFbf0u71cajoxKcfZIQ" target="_blank">YouTube</a></div>
       </div>
 
       <mat-divider vertical></mat-divider>
 
       <div>
         <div class="mat-body-2">For Developers</div>
-        <div><a zil-link href="https://github.com/Zilliqa">GitHub</a></div>
-        <div><a zil-link href="https://invite.zilliqa.com">Slack</a></div>
-        <div><a zil-link href="https://gitter.im/Zilliqa">Gitter</a></div>
-        <div><a zil-link href="https://forum.zilliqa.com">Forum</a></div>
+        <div><a zil-link href="https://github.com/Zilliqa" target="_blank">GitHub</a></div>
+        <div><a zil-link href="https://invite.zilliqa.com" target="_blank">Slack</a></div>
+        <div><a zil-link href="https://gitter.im/Zilliqa" target="_blank">Gitter</a></div>
+        <div><a zil-link href="https://forum.zilliqa.com" target="_blank">Forum</a></div>
       </div>
     </dg-row>
   </zil-card-content>
