--- a/src/app/scenes/blockchain-info/blockchain-info.component.html
+++ b/src/app/scenes/blockchain-info/blockchain-info.component.html
@@ -36,7 +36,7 @@
 
   <dg-grid-cell column-span="3">
     <zil-tile>
-      <zil-tile-title>Current Mini Epoch</zil-tile-title>
+      <zil-tile-title>Current TX Epoch</zil-tile-title>
       <zil-tile-content>{{ (blockchainInfo$ | async)?.CurrentMiniEpoch }}</zil-tile-content>
     </zil-tile>
   </dg-grid-cell>
