Fixed DS block diffuculty and gas price outputs

--- a/src/app/scenes/ds-block-detail/ds-block-detail.component.html
+++ b/src/app/scenes/ds-block-detail/ds-block-detail.component.html
@@ -7,7 +7,7 @@
 
     <mat-form-field>
       <mat-label>Difficulty</mat-label>
-      <input matInput value="{{ dsBlock.header.Difficulty }}" readonly>
+      <input matInput value="{{ dsBlock.header.DifficultyDS }}" readonly>
     </mat-form-field>
 
     <mat-form-field>
