--- a/src/app/scenes/ds-block-detail/ds-block-detail.component.html
+++ b/src/app/scenes/ds-block-detail/ds-block-detail.component.html
@@ -7,6 +7,11 @@
 
     <mat-form-field>
       <mat-label>Difficulty</mat-label>
+      <input matInput value="{{ dsBlock.header.Difficulty }}" readonly>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>DS Difficulty</mat-label>
       <input matInput value="{{ dsBlock.header.DifficultyDS }}" readonly>
     </mat-form-field>
 
